# haplokit

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.zh-CN.md  build.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
archive/python_reference_implementation/: README.md  demo_algorithms_popart.py  network_python.py  test_e2e_cpp_backend.py  test_e2e_python_backend.py
cmake/: htslib.cmake
data/: annotation.gff.db  popgroup.txt  var.sorted.vcf.gz.tbi
docs/architecture/: haptools-repo-layout.md
docs/brainstorms/: 2026-04-14-haptools-cli-rewrite-requirements.md
docs/development/: haptools-linux-workflow.md
docs/plans/: 2026-04-14-001-feat-haptools-v1-cli-plan.md
docs/release/: pypi-release.md
docs/specs/: haptools-result-schema.md  haptools-view-cli.md
haplokit/: __main__.py  _distribution.py  _gff.py  _network.py  _table.py  _transform.py  cli.py  network.py  plot.py  plot_network_popart.py
haptools/: __main__.py  _distribution.py  _palette.py  _transform.py  cli.py
inst/extdata/: var.sorted.vcf
src/cpp/: gff_annotator.cpp  gff_annotator.h  main.cpp  selector.cpp  selector.h  vcf_reader.cpp  vcf_reader.h  view_backend.cpp  view_backend.h
src/cpp/network/: graph.cpp  graph.h  hamming_simd.cpp  hamming_simd.h  haplotype.h  main.cpp  mjn_algorithm.cpp  mjn_algorithm.h  msn_algorithm.cpp  msn_algorithm.h  network_backend.cpp  network_backend.h  tcs_algorithm.cpp  tcs_algorithm.h
tests/cpp/: network_test.cpp  vcf_reader_test.cpp  view_backend_test.cpp
tests/python/: conftest.py  test_haplokit_cli_contract.py  test_haplokit_real_vcf.py  test_haptools_cli_contract.py  test_haptools_real_vcf.py  test_network.py  test_packaging_contract.py  test_python_only_plotting_contract.py
