[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haplokit"
version = "0.1.0"
description = "CLI-first haplotype tooling with a C++ backend and Python plotting surface"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "haplokit contributors" }]
dependencies = [
  "matplotlib>=3.8",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
haplokit = "haplokit.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pysam>=0.23",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["haplokit*"]

[tool.setuptools.package-data]
haplokit = ["_bin/*"]
